FIX clippath Avatars with svg-ellipse fix for Safari

--- a/src/app/modules/games/shoot-the-burglar/components/revealed/revealed.component.css
+++ b/src/app/modules/games/shoot-the-burglar/components/revealed/revealed.component.css
@@ -4,8 +4,6 @@ div {
 
 #avatar {
   position: absolute;
-  clip-path: url(#avatar_template);
-  width: auto;
 }
 
 #sticker {
